fix(css): custom scrollbar for IE10

--- a/mobileInput/assets/css/mobileInput.css
+++ b/mobileInput/assets/css/mobileInput.css
@@ -114,3 +114,30 @@
     border-bottom: 2px solid tomato;
     border-radius: 2px;
 }
+/*ie10*/
+/*IE*/
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .mobile_input--dropdown-ul {
+        /* ie scrollbar color properties */
+        scrollbar-base-color: #efefef;
+        scrollbar-face-color: #666666;
+        scrollbar-3dlight-color: #666666;
+        scrollbar-highlight-color: #666666;
+        scrollbar-track-color: #efefef;
+        scrollbar-arrow-color: #666666;
+        scrollbar-shadow-color: #666666;
+        scrollbar-dark-shadow-color: #666666;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
+
+    .mobile_input--dropdown-li{
+        width: 75px;
+    }
+
+    .scrollable:after {
+        content: "";
+        height: 32px;
+        display: block;
+    }
+
+}
